src/test/deca/syntax/valid/boolean_list.deca
//Description
//    Vérifier le passage des op bool
//
//Résultats :
//   Ok
//

{
boolean a = true && false;
boolean b = false || false;
boolean c = !true;
}
