src/test/deca/syntax/invalid/if_test3.deca
//Description
//    Vérifier le if
//
//Résultats :
//    Erreur Syntaxique ligne 10
//


{
if(if(3==2){;}){;}
}
